--- a/Foodie/Foodie.csproj
+++ b/Foodie/Foodie.csproj
@@ -124,6 +124,13 @@
     <Compile Include="Admin\AddProduct.aspx.designer.cs">
       <DependentUpon>AddProduct.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\AddFood.aspx.cs">
+      <DependentUpon>AddFood.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\AddFood.aspx.designer.cs">
+      <DependentUpon>AddFood.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\AdminLogin.aspx.cs">
       <DependentUpon>AdminLogin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -137,6 +144,13 @@
     </Compile>
     <Compile Include="Admin\AdminRegister.aspx.designer.cs">
       <DependentUpon>AdminRegister.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\BookTableList.aspx.cs">
+      <DependentUpon>BookTableList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\BookTableList.aspx.designer.cs">
+      <DependentUpon>BookTableList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
@@ -211,9 +225,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore.txt" />
     <Content Include="Admin\AddProduct.aspx" />
+    <Content Include="Admin\AddFood.aspx" />
     <Content Include="Admin\AdminLogin.aspx" />
     <Content Include="Admin\AdminRegister.aspx" />
+    <Content Include="Admin\BookTableList.aspx" />
     <Content Include="Admin\Dashboard.aspx" />
     <Content Include="App_Data\food_db.mdf" />
     <Content Include="App_Data\food_db_log.ldf">
@@ -400,6 +417,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Prod_images\" />
+    <Folder Include="User\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
