--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /.vs/Foodie/FileContentIndex/3450e7bc-841a-44ba-9db7-7f7c8c21f7cb.vsidx
 /.vs/Foodie/FileContentIndex/11a84d7f-7ca7-44aa-8850-58d9742b83d8.vsidx
 /.vs/Foodie/FileContentIndex/11a84d7f-7ca7-44aa-8850-58d9742b83d8.vsidx
+/.vs/Foodie/FileContentIndex/118258ab-352f-4f39-8c68-5963d6cb3cd6.vsidx
+/.vs/Foodie/FileContentIndex/47665322-cdf7-4269-b983-dcd8bf3752cf.vsidx
+/.vs/Foodie/FileContentIndex/a7ceae0c-d9be-407d-a94b-d2d9afd078d1.vsidx
