--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /.vs/Foodie/FileContentIndex/118258ab-352f-4f39-8c68-5963d6cb3cd6.vsidx
 /.vs/Foodie/FileContentIndex/47665322-cdf7-4269-b983-dcd8bf3752cf.vsidx
 /.vs/Foodie/FileContentIndex/a7ceae0c-d9be-407d-a94b-d2d9afd078d1.vsidx
+/.vs/Foodie/FileContentIndex
